--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "react-native-gesture-handler": "~1.3.0",
     "react-native-web": "^0.11.7",
     "react-navigation": "^3.12.0",
-    "axios": "^0.19.0"
+    "axios": "^0.19.0",
+    "native-base": "^2.13.8"
   },
   "devDependencies": {
     "babel-preset-expo": "^7.0.0",
